--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
         <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
-        <kotlin.version>1.3.20</kotlin.version>
+
+        <kotlin.version>1.3.21</kotlin.version>
         <junit.version>4.12</junit.version>
         <maven.compiler.version>3.8.0</maven.compiler.version>
-        <vertx.version>3.6.3</vertx.version>
+        <vertx.version>3.7.0</vertx.version>
         <guava.version>27.1-jre</guava.version>
         <postgresql.version>42.2.5</postgresql.version>
-        <log4j2.version>2.11.1</log4j2.version>
+        <log4j2.version>2.11.2</log4j2.version>
         <hikaricp.version>3.3.1</hikaricp.version>
         <jooq.version>3.11.10</jooq.version>
     </properties>
@@ -26,7 +27,7 @@
     <dependencies>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib</artifactId>
+            <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
         <dependency>
